# aws-nitro-enclaves-nsm-api

./: Cargo.toml
nsm-lib/: Cargo.toml
nsm-lib/src/: lib.rs
src/: lib.rs
src/api/: mod.rs
src/driver/: mod.rs
