[package]
name = "aws-nitro-enclaves-nsm-api"
version = "0.2.1"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
description = "This library provides the API for the Nitro Secure Module used in AWS Nitro Enclaves."
keywords = ["Nitro", "Enclaves", "AWS"]
categories = ["hardware-support"]
repository = "https://github.com/aws/aws-nitro-enclaves-nsm-api"

[workspace]
members = [ ".", "nsm-lib", "nsm-test" ]
default-members = [ "." ]

[profile.release]
lto = true

[dependencies]
nix = { version = "0.24", features = ["uio"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
